@@ -14,6 +14,4 @@ in Flask-Restless.
 
    .. automethod:: create_api_blueprint
 
-.. autoclass:: AuthenticationException
-
 .. autoclass:: ProcessingException
