@@ -20,4 +20,4 @@ __version__ = '0.10.0-dev'
 
 # make the following names available as part of the public API
 from .manager import APIManager
-from .views import ProcessingException, AuthenticationException
+from .views import ProcessingException
