@@ -22,6 +22,8 @@ Not yet released.
 - #146: preprocessors now really execute before other code.
 - #154: authentication function now may raise an exception instead of just
    returning a Boolean.
+- Authentication should now be implemented by the user as a preprocessor
+  function.
 
 Version 0.9.3
 -------------
